src/objects/TaskAssigneeActivity__c.object
<CustomObject>
    <description>Object for tracking changes to task assignees</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssigneeName__c</fullName>
        <label>AssigneeName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangeType__c</fullName>
        <label>ChangeType</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ModifiedBy__c</fullName>
        <label>ModifiedBy</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <label>ProjectId</label>
        <referenceTo>Project2__c</referenceTo>
        <relationshipLabel>TaskAssigneeActivites</relationshipLabel>
        <relationshipName>TaskAssigneeActivites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaskName__c</fullName>
        <label>TaskName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeStamp__c</fullName>
        <label>TimeStamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>TaskAssigneeActivity</label>
    <nameField>
        <label>TaskAssigneeActivity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskAssigneeActivites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>